Fix WP Admin Bar On Mobile

--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -10,6 +10,11 @@ body {
   overflow-x: hidden;
   overflow-y: scroll;
 }
+#wpadminbar {
+  @media (max-width: 600px) {
+    position: fixed;
+  }
+}
 .main-content {
   padding: 21px 0;
 }
